[package]
name = "compress-manager"
version = "0.0.6" # https://crates.io/crates/compress-manager
edition = "2021"
rust-version = "1.67"
publish = true
description = "Rust compression manager"
repository = "https://github.com/gyuho/compress-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
bs58 = "0.4.0"
flate2 = { version = "1.0.25", optional = false }
fs_extra = { version = "1.3.0", optional = false }
human-readable = "0.0.1"
lazy_static = "1.4.0"
log = "0.4.17"
path-clean = { version = "1.0.1", optional = false }
random-manager = "0.0.5"
tar = { version = "0.4.38", optional = false }
walkdir = { version = "2.3.2", optional = false }
zip = { version = "0.6.4", optional = false }
zstd = { version = "0.12", optional = false } # don't update until https://github.com/gyscos/zstd-rs/issues/147 is addressed

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.4.0"
