[package]
name = "compress-manager"
version = "0.0.10" # https://crates.io/crates/compress-manager
edition = "2021"
rust-version = "1.69"
publish = true
description = "Rust compression manager"
repository = "https://github.com/gyuho/compress-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
bs58 = "0.4.0"
flate2 = "1.0.26"
fs_extra = "1.3.0"
human-readable = "0.0.1"
lazy_static = "1.4.0"
log = "0.4.17"
path-clean = "1.0.1"
random-manager = "0.0.5"
tar = "0.4.38"
walkdir = "2.3.3"
zip = "0.6.6"
zstd = "0.12"

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.5.0"
